Gradle task updated to include appengin start, test executions and appengine stop.